Altering css to make sure menu tabs are visible when overlapping

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -861,7 +861,7 @@
 	display: flex;
 	flex-direction: column;
 	position: absolute;
-	z-index: 2;
+	z-index: 3;
 	margin-top: 247.5px;
 	left: 83px;
 	width: 28.7%;
